--- a/views/base.pug
+++ b/views/base.pug
@@ -1,16 +1,45 @@
 doctype html
 html
     head
-        title Natours | #{tour}
+        meta(charset='UTF-8')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
+        title Natours | Exciting tours for adventurous people
         link(rel='stylesheet' href='css/style.css')
         link(rel='shortcut icon' type='image/png' href='img/favicon.png')
+        link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
 
 
     body
-        h1= tour
-        H2= user.toUpperCase()
-        //- h1 The Park Camper 
+        // HEADER
+        header.header
+            nav.nav.nav--tours
+                a.nav__el(href='#') All tours
+            .header__logo
+                img(src='img/logo-white.png' alt='Natours logo')
+            nav.nav.nav--user
+                //- a.nav__el(href='#') My bookings
+                //- a.nav__el(href='#')
+                //-     img(src='img/iser.jpg' alt='User photo')
+                //-     span Shahid 
+                button.nav__el Log in
+                button.nav__el.nav__el--cta Sign up
 
-        - const x=9;
-        h2= 2*x
-        p This is just some text
+        // CONTENT
+        section.overview
+            h1= tour
+
+        // FOOTER
+        footer.footer
+            .footer__logo
+                img(src='img/logo-green.png' alt='Natour logo')
+            ul.footer__nav
+                li: a(href='#') About Us
+                li: a(href='#') Download
+                li: a(href='#') Become a guide
+                li: a(href='#') Careers
+                li: a(href='#') Contact
+            p.footer__copyright &copy; by Jonas Udemy Course. Feel free to use this project for your own purposes
+              
+                    
+
+       
