--- a/views/base.pug
+++ b/views/base.pug
@@ -11,34 +11,14 @@ html
 
     body
         // HEADER
-        header.header
-            nav.nav.nav--tours
-                a.nav__el(href='#') All tours
-            .header__logo
-                img(src='img/logo-white.png' alt='Natours logo')
-            nav.nav.nav--user
-                //- a.nav__el(href='#') My bookings
-                //- a.nav__el(href='#')
-                //-     img(src='img/iser.jpg' alt='User photo')
-                //-     span Shahid 
-                button.nav__el Log in
-                button.nav__el.nav__el--cta Sign up
+        include _header
 
         // CONTENT
         section.overview
             h1= tour
 
         // FOOTER
-        footer.footer
-            .footer__logo
-                img(src='img/logo-green.png' alt='Natour logo')
-            ul.footer__nav
-                li: a(href='#') About Us
-                li: a(href='#') Download
-                li: a(href='#') Become a guide
-                li: a(href='#') Careers
-                li: a(href='#') Contact
-            p.footer__copyright &copy; by Jonas Udemy Course. Feel free to use this project for your own purposes
+        include _footer
               
                     
 
