--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,5 +1,8 @@
 extends base
 
+block append head
+    //- script(src='/js/mapbox.js')
+
 mixin overviewBox(label,text,icon)
     .overview-box__detail
         svg.overview-box__icon
@@ -83,7 +86,7 @@ block content
         
 
     section.section-map
-        #map
+        #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
     section.section-reviews
         .reviews
