--- a/views/base.pug
+++ b/views/base.pug
@@ -22,7 +22,9 @@ html
         // FOOTER
         include _footer
 
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js')
         script(src='/js/mapbox.js')
+        script(src='/js/login.js')
               
                     
 
